--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -10,5 +10,4 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Run a multi-line script
-      run: |
-      docker build -t devops-python-boilerplate .
+      run: docker build -t devops-python-boilerplate .
