--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -9,5 +9,15 @@ jobs:
     
     steps:
     - uses: actions/checkout@v1
-    - name: Run a multi-line script
+    - name: Build the docker file 
       run: docker build -t devops-python-boilerplate .
+    - name: Publish it on asw s3
+      run: |
+      pip install awscli
+      export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
+      export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      export AWS_DEFAULT_REGION=ap-southeast-1
+      docker tag devops-python-boilerplate:latest 191195949309.dkr.ecr.ap-southeast-1.amazonaws.com/devops-python-boilerplate:0.0.59-devops-test
+      aws ecr get-login --no-include-email --region ap-southeast-1 | sh -
+      docker push 191195949309.dkr.ecr.ap-southeast-1.amazonaws.com/devops-python-boilerplate:0.0.59-devops-test
+      
