--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -11,17 +11,21 @@ jobs:
     - uses: actions/checkout@v1
 #     - name: Build the docker file 
 #       run: docker build -t devops-python-boilerplate .
-    - name: Publish it on asw s3
-      run: |
-        pip install awscli
-        export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
-        export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        export AWS_DEFAULT_REGION=ap-southeast-1
+#     - name: Publish it on asw s3
+#       run: |
+#         pip install awscli
+#         export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
+#         export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#         export AWS_DEFAULT_REGION=ap-southeast-1
 #         docker tag devops-python-boilerplate:latest 191195949309.dkr.ecr.ap-southeast-1.amazonaws.com/devops-python-boilerplate:0.0.59-devops-test
 #         aws ecr get-login --no-include-email --region ap-southeast-1 | sh -
 #         docker push 191195949309.dkr.ecr.ap-southeast-1.amazonaws.com/devops-python-boilerplate:0.0.59-devops-test
     - name: list the deployment on kubes
       run: |
+        pip install awscli
+        export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
+        export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        export AWS_DEFAULT_REGION=ap-southeast-1
         mkdir -p ~/.kube
         aws s3 cp s3://devops-heimdall-state-store/tracks/icarus/icarus-heimdall-kube-config ~/.kube/config
         helm ls devops-python-boilerplate-icarus --tiller-namespace helm
