ci cd file changes

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,8 @@
 stages:
+  - predev-build
+  - unit-test
+  - integration-test
+  - version
   - build
   - deploy-dev
   - rollback-dev
@@ -12,37 +16,47 @@ stages:
   - delete-prod
 
 include:
-  - project: 'call-ai/gitlab-ci-cd-templates'
+  - project: 'mindtickle-devops/gitlab-ci-cd-templates'
+    file: '/build-predev-template.yml'
+
+  - project: 'mindtickle-devops/gitlab-ci-cd-templates'
+    file: '/test-unit-template.yml'
+
+  - project: 'mindtickle-devops/gitlab-ci-cd-templates'
+    file: '/test-integration-template.yml'
+
+  - project: 'mindtickle-devops/gitlab-ci-cd-templates'
+    file: '/version-template.yml'
+
+  - project: 'mindtickle-devops/gitlab-ci-cd-templates'
     file: '/build-template.yml'
 
-  - project: 'call-ai/gitlab-ci-cd-templates'
+  - project: 'mindtickle-devops/gitlab-ci-cd-templates'
     file: '/deploy-dev-template.yml'
 
-  - project: 'call-ai/gitlab-ci-cd-templates'
+  - project: 'mindtickle-devops/gitlab-ci-cd-templates'
     file: '/rollback-dev-template.yml'
 
-  - project: 'call-ai/gitlab-ci-cd-templates'
+  - project: 'mindtickle-devops/gitlab-ci-cd-templates'
     file: '/delete-dev-template.yml'
 
-  - project: 'call-ai/gitlab-ci-cd-templates'
+  - project: 'mindtickle-devops/gitlab-ci-cd-templates'
     file: '/create-release-template.yml'
 
-  - project: 'call-ai/gitlab-ci-cd-templates'
+  - project: 'mindtickle-devops/gitlab-ci-cd-templates'
     file: '/deploy-staging-template.yml'
 
-  - project: 'call-ai/gitlab-ci-cd-templates'
+  - project: 'mindtickle-devops/gitlab-ci-cd-templates'
     file: '/rollback-staging-template.yml'
 
-  - project: 'call-ai/gitlab-ci-cd-templates'
+  - project: 'mindtickle-devops/gitlab-ci-cd-templates'
     file: '/delete-staging-template.yml'
 
-  - project: 'call-ai/gitlab-ci-cd-templates'
+  - project: 'mindtickle-devops/gitlab-ci-cd-templates'
     file: '/deploy-prod-template.yml'
 
-  - project: 'call-ai/gitlab-ci-cd-templates'
+  - project: 'mindtickle-devops/gitlab-ci-cd-templates'
     file: '/rollback-prod-template.yml'
 
-  - project: 'call-ai/gitlab-ci-cd-templates'
+  - project: 'mindtickle-devops/gitlab-ci-cd-templates'
     file: '/delete-prod-template.yml'
-
-
