--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,15 @@
-#language: minimal
+language: minimal
 
 services:
   - docker
 
 before_install:
   - docker build -t python-img .
-  - docker run -d -p 127.0.0.1:80:8000 python-img
+  - docker run -d --name python-boilerplate -p 127.0.0.1:80:8000 python-img
   - docker ps -a
 
 script:
   - ls
   - sleep 30
-  - pytest
+  - docker exec -it python-boilerplate pytest
   - curl localhost:80
