--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,7 @@
-language: minimal
+dist: bionic
 
 services:
   - docker
-
-before_install:
-  - docker build -t python-img .
-  - curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl
-  - chmod +x ./kubectl
-  - sudo mv ./kubectl /usr/local/bin/kubectl
-  - curl https://raw.githubusercontent.com/kubernetes/helm/master/scripts/get > get_helm.sh
-  - chmod 700 get_helm.sh
-  - sudo ./get_helm.sh
 
 jobs:
   include:
@@ -18,6 +9,7 @@ jobs:
       script: bash build_image.sh
     - stage: test
       script:
+        - bash build_image.sh
         - docker run -d --name python-boilerplate -p 127.0.0.1:80:8000 python-img
         - sleep 10
         - docker exec -it python-boilerplate pytest
@@ -27,4 +19,4 @@ jobs:
     - stage: deploy
       script:
         - echo "helm here"
-        - helm version
+        - bash deploy.sh
