--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,66 +1,113 @@
-stages:
-  - predev-build
-  - deploy-track
-  - unit-test
-  - integration-test
-  - version
-  - build
-  - deploy-dev
-  - rollback-dev
-  - delete-dev
-  - create-release
-  - deploy-staging
-  - rollback-staging
-  - delete-staging
-  - deploy-prod
-  - rollback-prod
-  - delete-prod
-
 include:
-  - project: 'mindtickle/mindtickle-devops/ci-cd-templates'
-    file: '/build-predev-template.yml'
+  - project: 'mindtickle/devops/devops-ci-cd-templates'
+    file: '/mirrored/ci-cd.yml'
 
-  - project: 'mindtickle/mindtickle-devops/ci-cd-templates'
-    file: '/deploy-track-template.yml'
+content-event-pipeline-build:
+  extends: .build
+  variables:
+    PROJECT_NAME: "content-event-pipeline"
 
-  - project: 'mindtickle/mindtickle-devops/ci-cd-templates'
-    file: '/test-unit-template.yml'
+content-event-pipeline-build-heimdall:
+  extends: .build-heimdall
+  variables:
+    PROJECT_NAME: "content-event-pipeline"
 
-  - project: 'mindtickle/mindtickle-devops/ci-cd-templates'
-    file: '/test-integration-template.yml'
+content-event-pipeline-asset-deploy:
+  extends: .asset-deploy
+  variables:
+    PROJECT_NAME: "content-event-pipeline"
 
-  - project: 'mindtickle/mindtickle-devops/ci-cd-templates'
-    file: '/version-template.yml'
+content-event-pipeline-config-deploy:
+  extends: .config-deploy
+  variables:
+    PROJECT_NAME: "content-event-pipeline"
 
-  - project: 'mindtickle/mindtickle-devops/ci-cd-templates'
-    file: '/build-template.yml'
+content-event-pipeline-deploy-heimdall:
+  extends: .artifact-deploy-heimdall
+  variables:
+    PROJECT_NAME: "content-event-pipeline"
 
-  - project: 'mindtickle/mindtickle-devops/ci-cd-templates'
-    file: '/deploy-dev-template.yml'
+content-event-pipeline-deploy:
+  extends: .artifact-deploy
+  variables:
+    PROJECT_NAME: "content-event-pipeline"
 
-  - project: 'mindtickle/mindtickle-devops/ci-cd-templates'
-    file: '/rollback-dev-template.yml'
+event-pipeline-build:
+  extends: .build
+  variables:
+    PROJECT_NAME: "event-pipeline"
 
-  - project: 'mindtickle/mindtickle-devops/ci-cd-templates'
-    file: '/delete-dev-template.yml'
+event-pipeline-build-heimdall:
+  extends: .build-heimdall
+  variables:
+    PROJECT_NAME: "event-pipeline"
 
-  - project: 'mindtickle/mindtickle-devops/ci-cd-templates'
-    file: '/create-release-template.yml'
+event-pipeline-asset-deploy:
+  extends: .asset-deploy
+  variables:
+    PROJECT_NAME: "event-pipeline"
 
-  - project: 'mindtickle/mindtickle-devops/ci-cd-templates'
-    file: '/deploy-staging-template.yml'
+event-pipeline-config-deploy:
+  extends: .config-deploy
+  variables:
+    PROJECT_NAME: "event-pipeline"
 
-  - project: 'mindtickle/mindtickle-devops/ci-cd-templates'
-    file: '/rollback-staging-template.yml'
+event-pipeline-deploy-heimdall:
+  extends: .artifact-deploy-heimdall
+  variables:
+    PROJECT_NAME: "event-pipeline"
 
-  - project: 'mindtickle/mindtickle-devops/ci-cd-templates'
-    file: '/delete-staging-template.yml'
+event-pipeline-deploy:
+  extends: .artifact-deploy
+  variables:
+    PROJECT_NAME: "event-pipeline"
 
-  - project: 'mindtickle/mindtickle-devops/ci-cd-templates'
-    file: '/deploy-prod-template.yml'
+devops-python-boilerplate-standalone-build-heimdall:
+  extends: .build-heimdall
+  variables:
+    PROJECT_NAME: "devops-python-boilerplate-standalone"
 
-  - project: 'mindtickle/mindtickle-devops/ci-cd-templates'
-    file: '/rollback-prod-template.yml'
+devops-python-boilerplate-standalone-asset-deploy:
+  extends: .asset-deploy
+  variables:
+    PROJECT_NAME: "devops-python-boilerplate-standalone"
 
-  - project: 'mindtickle/mindtickle-devops/ci-cd-templates'
-    file: '/delete-prod-template.yml'
+devops-python-boilerplate-standalone-config-deploy:
+  extends: .config-deploy
+  variables:
+    PROJECT_NAME: "devops-python-boilerplate-standalone"
+
+devops-python-boilerplate-standalone-deploy-heimdall:
+  extends: .artifact-deploy-heimdall
+  variables:
+    PROJECT_NAME: "devops-python-boilerplate-standalone"
+
+devops-python-boilerplate-build:
+  extends: .build
+  variables:
+    PROJECT_NAME: "devops-python-boilerplate"
+
+devops-python-boilerplate-build-heimdall:
+  extends: .build-heimdall
+  variables:
+    PROJECT_NAME: "devops-python-boilerplate"
+
+devops-python-boilerplate-asset-deploy:
+  extends: .asset-deploy
+  variables:
+    PROJECT_NAME: "devops-python-boilerplate"
+
+devops-python-boilerplate-config-deploy:
+  extends: .config-deploy
+  variables:
+    PROJECT_NAME: "devops-python-boilerplate"
+
+devops-python-boilerplate-deploy-heimdall:
+  extends: .artifact-deploy-heimdall
+  variables:
+    PROJECT_NAME: "devops-python-boilerplate"
+
+devops-python-boilerplate-deploy:
+  extends: .artifact-deploy
+  variables:
+    PROJECT_NAME: "devops-python-boilerplate"
